# Ejercicios-AEDI

./: .gitignore  AGENTS.md  README.md  pom.xml
.github/: copilot-instructions.md
asistente-asignatura/: README.md
asistente-asignatura/base_de_conocimiento/ejercicios_resueltos/Busqueda y ordenacion/Ejercicio1/: Ejercicio1.java
asistente-asignatura/base_de_conocimiento/ejercicios_resueltos/Busqueda y ordenacion/Ejercicio2/: Carta.java  Ejercicio2.java
asistente-asignatura/base_de_conocimiento/ejercicios_resueltos/Busqueda y ordenacion/Ejercicio3/: MatrixSum.java  ValueCol.java
asistente-asignatura/base_de_conocimiento/ejercicios_resueltos/Busqueda y ordenacion/Ejercicio4/: Medium.java
asistente-asignatura/base_de_conocimiento/enunciados/: Ejercicios_de_TADs_formatted.md  Ejercicios_de_estructuras_enlazadas_formatted.md  Ejercicios_ordenacion_y_busqueda_formatted.md
asistente-asignatura/base_de_conocimiento/librerias/tads-1.0.12-javadoc/: allclasses-index.html  allpackages-index.html  help-doc.html  index-all.html  index.html  overview-summary.html  overview-tree.html  search.html  serialized-form.html
asistente-asignatura/base_de_conocimiento/restricciones/: restricciones_generales_generar_ejercicios.md
asistente-asignatura/scriptsAuxiliares/conversores/: README.md
asistente-asignatura/scriptsAuxiliares/conversores/markdown2Pdf/: .pdm-python  README.md  pyproject.toml  run_md2pdf.sh
asistente-asignatura/scriptsAuxiliares/conversores/pdf2Markdown/: .pdm-python  README.md  pyproject.toml  run_pdf2md.sh  simple_converter.py
(+78 files in other folders)
