[project]
name = "markdown2pdf-simple"
version = "1.1.0"
description = "Conversor de Markdown del proyecto teaching-agent usando Pandoc"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "weasyprint>=59.0",
]

[project.scripts]
md2pdf = "simple_converter:main"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
  "pytest>=7.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
